gcc/testsuite/rust/rustc/ui/delegation/empty-glob_dg.rs
#![feature(fn_delegation)]
#![allow(incomplete_features)]

trait Trait {}

struct S;
impl S {
    reuse Trait::*; // { dg-error "" "" { target *-*-* } }
}

fn main() {}

